...
<resources>
    <string name="app_name">Code Monk</string>
    <string name="code_monk">Code Monk</string>
    <string name="dept_of_mca">Dept of MCA</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="email_format">nu24mcXXX@nmamit.in</string>
    <string name="password">Password</string>
    <string name="password_icon">Password Icon</string>
    <string name="re_password">Re-Type Password</string>
...
    <string name="show_hide_password">Show/Hide Password</string>
    <string name="show_hide_re_password">Show/Hide RePassword</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_heading">Forgot Password</string>
    <string name="login_success">Login Success</string>
    <string name="back">Back</string>
    <string name="find_account">Find account</string>
    <string name="blue_tick">Blue Tick</string>
    <string name="like">Like</string>
    <string name="unlike">Unlike</string>
    <string name="currently_working_on">"Currently working on "</string>
    <string name="team_members">Team members:</string>
...
    <string name="github">GitHub</string>
    <string name="x">X</string>
    <string name="website">Website</string>
    <string name="more_link">Portfolio</string>
    <string name="working_on">Working on</string>
    <string name="not_working_on_project">Not working on any project</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="remove_profile">Remove Profile</string>
    <string name="username_placeholder">Username</string>
    <string name="bio_placeholder">Bio</string>
    <string name="add_a_bio_placeholder">Add a Bio</string>
    <string name="current_project_placeholder">Current Project</string>
    <string name="add_a_link_placeholder">Add a link</string>
    <string name="tap_to_add_a_link">Tap to add a link</string>
    <string name="update">Update</string>
    <string name="tap_to_remove">Tap to remove a link</string>
    <string name="invalid_link">Link should start with http:// or https://</string>
    <string name="mentor_for">Mentor for %1$s</string>
    <string name="mentor_username">Your mentor\'s username</string>
    <string name="recent_login_note">This action requires you to be recently logged in.</string>
    <string name="password_updated">Password updated successfully.</string>
...
    <string name="delete_announcement">Delete Announcement</string>
    <string name="delete_announcement_message">Are you sure you want to delete this announcement?</string>
    <string name="link">Link</string>
    <string name="edit_post">Edit Post</string>
    <string name="my_post_id">Post%1$d</string>
    <string name="mentor">Mentor:</string>
    <string name="mentor_placeholder">Mentor</string>
    <string name="monk_not_found">Monk not found!</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="notification">Notification</string>
    <string name="notification_permission_denied">Please enable the notification permission for this app to work properly.</string>
    <string name="send_notification">Send Notification</string>
    <string name="send">Send</string>
...
