...
                    )
                )
            )
        ),
        profileImage = "",
        currentUserId = "1",
        currentUsername = "pra_sidh_22",
        currentUserType = "student",
        topMembers = listOf(),
        onProfileClick = { },
        onSearchClick = { },
        onUsernameClick = { },
        onEditPostClick = { },
...
